<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <!--TODO 1.4. nicht mehr nötig, jetzt in toolbar-->

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginEnd="16dp"
        android:layout_gravity="end"
        android:gravity="center_vertical">

        <ImageButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/upload"
            android:background="@android:color/transparent"
            android:scaleType="fitCenter"
            android:padding="10dp"
            android:contentDescription="@string/uploadicon"
            android:id="@+id/uploadiconid"/>

        <Button
            android:id="@+id/uploadfromstoragebuttonid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/BTN"
            android:text="@string/uploadfromsmartphone" />

    </LinearLayout>



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginEnd="16dp"
        android:layout_gravity="end"
        android:gravity="center_vertical">

        <ImageButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/mic"
            android:background="@android:color/transparent"
            android:scaleType="fitCenter"
            android:padding="10dp"
            android:contentDescription="@string/micicon"
            android:id="@+id/microphoneiconid"/>

        <Button
            android:id="@+id/recordyourselfbuttonid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/BTN"
            android:text="@string/recordyourself" />

    </LinearLayout>

</LinearLayout>